# Nexus

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: linkedin-post.md
evals/: examples.sample.jsonl  run_classify_eval.py
prompts/: classify.md  edit.md  qa.md  review.md  search.md
src/organizer/: __init__.py  calibrate.py  config.py  embeddings.py  export.py  logging_setup.py  main.py  review.py  semantic.py
src/organizer/bot/: app.py
src/organizer/db/: __init__.py  engine.py  models.py  repository.py
src/organizer/llm/: __init__.py  classifier.py  editor.py  insights.py  qa.py  schema.py  search.py
tests/: conftest.py  test_calibrate.py  test_classification_repo.py  test_classifier.py  test_day.py  test_editor.py  test_export.py  test_habits.py  test_insights.py  test_qa.py  test_queries_repo.py  test_repository.py  test_search.py  test_semantic.py
