[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "organizer"
version = "0.1.0"
description = "Personal Organizer Bot - captures Telegram messages, structures them with AI and stores them for later insights."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21",
    "SQLAlchemy>=2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "anthropic>=0.40",
    "sentence-transformers>=3",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
organizer = "organizer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
